Fix swagger spec
